--- a/pub_config.yml
+++ b/pub_config.yml
@@ -7,3 +7,18 @@ services:
         status: 200
         params:
           - xml_contents
+
+tests:
+  test_prophet_import:
+    send: "GET"
+    target: '/api/v1/playlists/prophet_xml_import/wqxr/'
+    vars:
+      stream: wqxr
+    expect: 
+      publisher.prophet_xml_import:
+        called_times: 1
+        method: "GET"
+        return_status: 200
+        called_with: 
+          params: 
+            stream: wqxr
